[package]
name = "drai_ctrl"
version = "0.1.0-alpha"
edition = "2021"
default-run = "drai_ctrl"

[lib]
name = "drake"
path = "src/lib.rs"

[[bin]]
name = "drai_ctrl"
path = "bin/drai_ctrl.rs"

[[bin]]
name = "drake_table_test"
path = "bin/drake_table_test.rs"

[dependencies]
clap = { version = "4.4.11", features = [ "cargo" ] }
env_logger = "0.11.3"
log = "0.4.20"
indicatif = "0.17.7"
serde = "1.0.193"
serde_json = "1.0.108"

pwm-pca9685 = { version = "1.0.0", features = [ "std" ] }
rppal = { version = "0.17.1", features = [ "embedded-hal" ] }

syact = "0.12.1-alpha"
sybot = "0.9.0-alpha"
syunit = "0.1.5"
embedded-hal = "1.0.0"
